--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -3,12 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Odin Recipes</title>
+        <title>Watermelon Feta Salad</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-       <h1>Odin Recipes</h1>
-       <a href="recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a>
+        <h1>Watermelon Feta Salad</h1>
     </body>
 </html>
