add 2 recipes to recipes directory

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <body>
        <h1>Odin Recipes</h1>
        <a href="recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a>
+       <a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a>
+       <a href="recipes/steak-en-garlic-butter.html">Sirloin Steak with Garlic Butter</a>
     </body>
 </html>
