--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -31,10 +31,12 @@
 </ul>
 
 <h2>Direction</h2>
-<p><strong>Step 1</strong></p>
-<ol><li>Whisk olive oil, vinegar, and salt together in a large mixing bowl. 
+<ol>
+    <p><strong>Step 1</strong></p>
+    <li>Whisk olive oil, vinegar, and salt together in a large mixing bowl. 
     Add tomatoes, <br>arugula, and red onion; toss to coat. 
-    Gently stir in watermelon and feta cheese <br>to serve.</li>
+    Gently stir in watermelon and feta cheese <br>to serve.
+    </li>
 </ol>
     </body>
 </html>
