--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </head>
     <body>
        <h1>Odin Recipes</h1>
-       <a href="recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a>
-       <a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a>
-       <a href="recipes/steak-en-garlic-butter.html">Sirloin Steak with Garlic Butter</a>
+       <ul>
+        <li><a href="recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a></li>
+        <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
+        <li><a href="recipes/steak-en-garlic-butter.html">Sirloin Steak with Garlic Butter</a></li>
+       </ul>
     </body>
 </html>
