--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-       <h1>Odin Recipes</h1>
+       <h1>&#128592; Odin Recipes &#128598;</h1>
        <ul>
         <li><a href="recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a></li>
         <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
