--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -1,64 +1,75 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Indian Chicken Curry</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>Indian Chicken Curry</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8485399.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="plate with curry on spinach leaves">
-        <h2>Description</h2>
-        <p>Chicken curry from the Indian subcontinent typically features chicken stewed in<br> a tomato-based sauce seasoned with aromatic spices.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>3 tablespoons olive oil</li>
 
-<li>1 small onion, chopped</li>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Indian Chicken Curry</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
 
-<li>2 cloves garlic, minced</li>
+<body>
+    <h1 id="top">Indian Chicken Curry</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8485399.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        alt="plate with curry on spinach leaves">
+    <h2>Description</h2>
+    <p>Chicken curry from the Indian subcontinent typically features chicken stewed in<br> a tomato-based sauce seasoned
+        with aromatic spices.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3 tablespoons olive oil</li>
 
-<li>3 tablespoons curry powder</li>
+        <li>1 small onion, chopped</li>
 
-<li>1 teaspoon ground cinnamon</li>
+        <li>2 cloves garlic, minced</li>
 
-<li>1 teaspoon paprika</li>
+        <li>3 tablespoons curry powder</li>
 
-<li>1 bay leaf</li>
+        <li>1 teaspoon ground cinnamon</li>
 
-<li>½ teaspoon grated fresh ginger root</li>
+        <li>1 teaspoon paprika</li>
 
-<li>½ teaspoon white sugar</li>
+        <li>1 bay leaf</li>
 
-<li>salt to taste</li>
+        <li>½ teaspoon grated fresh ginger root</li>
 
-<li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+        <li>½ teaspoon white sugar</li>
 
-<li>1 tablespoon tomato paste</li>
+        <li>salt to taste</li>
 
-<li>1 cup plain yogurt</li>
+        <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
 
-<li>¾ cup coconut milk</li>
+        <li>1 tablespoon tomato paste</li>
 
-<li>½ lemon, juiced</li>
+        <li>1 cup plain yogurt</li>
 
-<li>½ teaspoon cayenne pepper</li>
-        </ul>
+        <li>¾ cup coconut milk</li>
 
-<h2>Direction</h2>
-<p><strong>Step 1</strong></p>
-<ol>
+        <li>½ lemon, juiced</li>
+
+        <li>½ teaspoon cayenne pepper</li>
+    </ul>
+
+    <h2>Direction</h2>
     <p><strong>Step 1</strong></p>
-    <li>Heat olive oil in a skillet over medium heat. Sauté onion until lightly browned.</li>
-    <p><strong>Step 2</strong></p>
-<li>Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar, and salt. Continue stirring for 2 minutes.</li>
-<p><strong>Step 3</strong></p>
-<li>Add chicken pieces, tomato paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.</li>
-<p><strong>Step 4</strong></p>
-<li>Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5 more minutes.</li>
-</ol>
-    </body>
+    <ol>
+        <p><strong>Step 1</strong></p>
+        <li>Heat olive oil in a skillet over medium heat. Sauté onion until lightly browned.</li>
+        <p><strong>Step 2</strong></p>
+        <li>Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar, and salt. Continue stirring for 2
+            minutes.</li>
+        <p><strong>Step 3</strong></p>
+        <li>Add chicken pieces, tomato paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20
+            to 25 minutes.</li>
+        <p><strong>Step 4</strong></p>
+        <li>Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5 more minutes.</li>
+    </ol>
+    <ul>
+        <li><a href="#top">Back to top</a></li>
+        <li><a href="/index.html">To main</a></li>
+    </ul>
+</body>
+
 </html>
