--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Watermelon Feta Salad</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <h1>Watermelon Feta Salad</h1>
-        <img src="https://www.allrecipes.com/thmb/8LyvToR48OxwLcUdfeZacVdmTIc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/watermelon-feta-salad-france-c-4x3-1-2000-9fce019e8ca24116b29835f41ac8fb1f.jpg" alt="bowl of Salad">
-        <h2>Description</h2>
-        <p>This is a chunky watermelon feta salad with arugula and tomatoes is enjoyed by all.</p>
-        <h2>Ingredients</h2>
-        <ul>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Watermelon Feta Salad</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <h1 id="top">Watermelon Feta Salad</h1>
+    <img src="https://www.allrecipes.com/thmb/8LyvToR48OxwLcUdfeZacVdmTIc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/watermelon-feta-salad-france-c-4x3-1-2000-9fce019e8ca24116b29835f41ac8fb1f.jpg"
+        alt="bowl of Salad">
+    <h2>Description</h2>
+    <p>This is a chunky watermelon feta salad with arugula and tomatoes is enjoyed by all.</p>
+    <h2>Ingredients</h2>
+    <ul>
         <li>3 tablespoons olive oil</li>
 
-<li>2 teaspoons white balsamic vinegar</li>
+        <li>2 teaspoons white balsamic vinegar</li>
 
-<li>½ teaspoon kosher salt</li>
+        <li>½ teaspoon kosher salt</li>
 
-<li>8 ounces grape tomatoes, halved</li>
+        <li>8 ounces grape tomatoes, halved</li>
 
-<li>3 cups arugula</li>
+        <li>3 cups arugula</li>
 
-<li>1 cup sliced red onion</li>
+        <li>1 cup sliced red onion</li>
 
-<li>2 pounds watermelon, cubed</li>
+        <li>2 pounds watermelon, cubed</li>
 
-<li>4 ounces feta cheese, cut into 1/4-inch cubes</li>
-</ul>
+        <li>4 ounces feta cheese, cut into 1/4-inch cubes</li>
+    </ul>
 
-<h2>Direction</h2>
-<ol>
-    <p><strong>Step 1</strong></p>
-    <li>Whisk olive oil, vinegar, and salt together in a large mixing bowl. 
-    Add tomatoes, <br>arugula, and red onion; toss to coat. 
-    Gently stir in watermelon and feta cheese <br>to serve.
-    </li>
-</ol>
-    </body>
+    <h2>Direction</h2>
+    <ol>
+        <p><strong>Step 1</strong></p>
+        <li>Whisk olive oil, vinegar, and salt together in a large mixing bowl.
+            Add tomatoes, <br>arugula, and red onion; toss to coat.
+            Gently stir in watermelon and feta cheese <br>to serve.
+        </li>
+    </ol>
+    <ul>
+        <li><a href="#top">Back to top</a></li>
+        <li><a href="/index.html">To main</a></li>
+    </ul>
+</body>
+
 </html>
