--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+     <div class="container">
        <h1>&#128592; Odin Recipes &#128598;</h1>
        <ul>
         <li><a href="recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a></li>
         <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
         <li><a href="recipes/steak-en-garlic-butter.html">Sirloin Steak with Garlic Butter</a></li>
        </ul>
+     </div>
     </body>
 </html>
