--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -68,7 +68,7 @@
     </ol>
     <ul>
         <li><a href="#top">Back to top</a></li>
-        <li><a href="/index.html">To main</a></li>
+        <li><a href="../index.html">To main</a></li>
     </ul>
 </body>
 
