--- a/recipes/steak-en-garlic-butter.html
+++ b/recipes/steak-en-garlic-butter.html
@@ -50,7 +50,7 @@
     </ol>
     <ul>
         <li><a href="#top">Back to top</a></li>
-        <li><a href="/index.html">To main</a></li>
+        <li><a href="../index.html">To main</a></li>
     </ul>
 </body>
 
