--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -43,7 +43,7 @@
     </ol>
     <ul>
         <li><a href="#top">Back to top</a></li>
-        <li><a href="/index.html">To main</a></li>
+        <li><a href="../index.html">To main</a></li>
     </ul>
 </body>
 
