style content pages

--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -7,11 +7,10 @@
     <title>Indian Chicken Curry</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="pages.css">
 </head>
-
 <body>
-    <h1 id="top">Indian Chicken Curry</h1>
+    <h1 id="top">&#128592; Indian Chicken Curry &#128598;</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8485399.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
         alt="plate with curry on spinach leaves">
     <h2>Description</h2>
@@ -66,10 +65,10 @@
         <p><strong>Step 4</strong></p>
         <li>Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5 more minutes.</li>
     </ol>
-    <ul>
-        <li><a href="#top">Back to top</a></li>
-        <li><a href="../index.html">To main</a></li>
-    </ul>
+    <div id="buttons">
+        <a class="btn yellow" href="#top">Back to top</a>
+        <a class="btn orange" href="../index.html">To main</a>
+    </div>
 </body>
 
 </html>
