--- a/recipes/steak-en-garlic-butter.html
+++ b/recipes/steak-en-garlic-butter.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sirloin Steak with Garlic Butter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="pages.css">
 </head>
-
 <body>
-    <h1 id="top">Sirloin Steak with Garlic Butter</h1>
+    <h1 id="top">&#128592; Sirloin Steak with Garlic Butter &#128598;</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8685149.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
         alt="grilled sirloin steaks">
 
@@ -48,10 +48,10 @@
         <li>Transfer steaks to warmed plates; brush the tops liberally with garlic butter and allow to rest for 2 to 3
             minutes before serving.</li>
     </ol>
-    <ul>
-        <li><a href="#top">Back to top</a></li>
-        <li><a href="../index.html">To main</a></li>
-    </ul>
+    <div id="buttons">
+        <a class="btn yellow" href="#top">Back to top</a>
+        <a class="btn orange" href="../index.html">To main</a>
+    </div>
 </body>
 
 </html>
