--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Watermelon Feta Salad</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="pages.css">
 </head>
-
 <body>
-    <h1 id="top">Watermelon Feta Salad</h1>
+    <h1 id="top">&#128592; Watermelon Feta Salad &#128598;</h1>
     <img src="https://www.allrecipes.com/thmb/8LyvToR48OxwLcUdfeZacVdmTIc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/watermelon-feta-salad-france-c-4x3-1-2000-9fce019e8ca24116b29835f41ac8fb1f.jpg"
         alt="bowl of Salad">
     <h2>Description</h2>
@@ -41,10 +41,10 @@
             Gently stir in watermelon and feta cheese <br>to serve.
         </li>
     </ol>
-    <ul>
-        <li><a href="#top">Back to top</a></li>
-        <li><a href="../index.html">To main</a></li>
-    </ul>
+    <div id="buttons">
+        <a class="btn yellow" href="#top">Back to top</a>
+        <a class="btn orange" href="../index.html">To main</a>
+    </div>
 </body>
 
 </html>
